--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "webpack": "^3.8.1"
   },
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-plugin-github": "^0.19.0"
+  },
   "peerDependencies": {
     "webpack": "^3.0.0"
   }
