Add basic flow types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "env": {
     "node": true
   },
-  "extends": ["plugin:github/es6"]
+  "rules": {
+    "no-console": "off"
+  },
+  "extends": ["plugin:github/es6", "plugin:github/flow"]
 }
