--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/github/webpack-config-github#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^0.1.17",
     "flow-bin": "^0.59.0",
     "webpack": "^3.8.1"
   },
