--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^0.1.17",
     "flow-bin": "^0.59.0",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
