--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "homepage": "https://github.com/github/webpack-config-github#readme",
   "dependencies": {
     "clean-webpack-plugin": "^0.1.17",
-    "flow-bin": "^0.59.0",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
-    "eslint-plugin-github": "^0.19.0"
+    "eslint-plugin-github": "^0.19.0",
+    "flow-bin": "^0.59.0"
   },
   "peerDependencies": {
     "webpack": "^3.0.0"
