--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/github/webpack-config-github#readme",
   "dependencies": {
+    "babel-minify-webpack-plugin": "^0.2.0",
     "clean-webpack-plugin": "^0.1.17",
+    "compression-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1"
   },
