--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean-webpack-plugin": "^0.1.17",
     "compression-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
