--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "clean-webpack-plugin": "^0.1.17",
     "compression-webpack-plugin": "^1.0.1",
+    "graphql-config": "^1.0.7",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
