--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-loader": "^7.0.0",
     "babel-minify-webpack-plugin": "^0.2.0",
+    "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.0",
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.0",
@@ -26,6 +27,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "graphql-config": "^1.0.0",
     "html-webpack-plugin": "^2.0.0",
+    "relay-compiler": "^1.4.1",
+    "relay-compiler-webpack-plugin": "^0.5.5",
     "style-loader": "^0.19.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.0.0"
