--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "graphql-config": "^1.0.0",
     "html-webpack-plugin": "^2.0.0",
+    "postcss-loader": "^2.0.8",
     "relay-compiler": "^1.0.0",
     "relay-compiler-webpack-plugin": "^0.5.0",
     "style-loader": "^0.19.0",
@@ -38,6 +39,7 @@
     "webpack-dev-server": "^2.0.0"
   },
   "devDependencies": {
+    "precss": "^2.0.0",
     "eslint": "^4.11.0",
     "eslint-plugin-github": "^0.19.0",
     "flow-bin": "^0.59.0"
