--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=8.9.1"
   },
   "dependencies": {
+    "babel-core": "^6.0.0",
     "babel-loader": "^7.0.0",
     "babel-minify-webpack-plugin": "^0.2.0",
     "chalk": "^2.3.0",
@@ -32,9 +33,10 @@
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "graphql": "^0.11.0",
     "graphql-config": "^1.0.0",
     "html-webpack-plugin": "^2.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.0.0",
     "relay-compiler": "^1.0.0",
     "relay-compiler-webpack-plugin": "^0.5.0",
     "style-loader": "^0.19.0",
@@ -42,10 +44,10 @@
     "webpack-dev-server": "^2.0.0"
   },
   "devDependencies": {
-    "precss": "^2.0.0",
     "eslint": "^4.11.0",
     "eslint-plugin-github": "^0.19.0",
-    "flow-bin": "^0.59.0"
+    "flow-bin": "^0.59.0",
+    "precss": "^2.0.0"
   },
   "peerDependencies": {
     "webpack": "^3.0.0"
