--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
     "webpack-dev-server": "^2.0.0"
   },
   "devDependencies": {
+    "babel-plugin-relay": "^1.4.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.11.0",
     "eslint-plugin-github": "^0.19.0",
     "flow-bin": "^0.59.0",
-    "precss": "^2.0.0"
+    "precss": "^2.0.0",
+    "react": "^16.2.0",
+    "react-relay": "^1.4.1"
   },
   "peerDependencies": {
     "webpack": "^3.0.0"
