--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "clean-webpack-plugin": "^0.1.0",
     "compression-webpack-plugin": "^1.0.0",
+    "content-security-policy-builder": "^1.1.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
