--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "content-security-policy-builder": "^1.1.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.0",
+    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "graphql": "^0.11.0",
     "graphql-config": "^1.0.0",
