Conditionally initialize config.devServer

--- a/examples/github-graphql/.graphqlconfig
+++ b/examples/github-graphql/.graphqlconfig
@@ -7,6 +7,12 @@
         "headers": {
           "Authorization": "Bearer ${env:API_TOKEN}"
         }
+      },
+      "dev": {
+        "url": "https://api.github.com/graphql",
+        "headers": {
+          "Authorization": "Bearer ${env:API_TOKEN}"
+        }
       }
     }
   }
