Update entry nginx example

--- a/examples/docker/config/nginx.conf
+++ b/examples/docker/config/nginx.conf
@@ -2,17 +2,15 @@ server {
     listen       80;
     server_name  localhost;
 
-    gzip_static  on;
-
-    set $entry "index";
-    if ($uri ~ ^\/([^\/\.]+)) {
-      set $entry "$1";
-    }
-
     location / {
+        gzip_static  on;
+
         root   /usr/share/nginx/html;
         index  index.html;
-        try_files $uri $uri.html /$entry.html /index.html;
+
+        location ~ ^\/(?<entry>[^\/\.]+) {
+            try_files $uri /$entry.html /index.html;
+        }
     }
 
     error_page   500 502 503 504  /50x.html;
