--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "babel-plugin-relay": "^1.4.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.11.0",
-    "eslint-plugin-github": "0.20.1",
+    "eslint-plugin-github": "^0.22.0",
     "flow-bin": "0.62.0",
     "precss": "^2.0.0",
     "react": "^16.2.0",
