Lock working versions of relay compiler chain

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "graphql-config": "^1.0.0",
     "html-webpack-plugin": "^2.0.0",
     "postcss-loader": "^2.0.0",
-    "relay-compiler": "^1.0.0",
-    "relay-compiler-webpack-plugin": "^0.7.0",
+    "relay-compiler": "1.4.1",
+    "relay-compiler-webpack-plugin": "0.7.0",
     "style-loader": "^0.20.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.0.0"
