--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "postcss-loader": "^2.1.0",
     "read-pkg": "^3.0.0",
     "relay-compiler": "^1.5.0",
-    "relay-compiler-webpack-plugin": "^0.9.2",
+    "relay-compiler-webpack-plugin": "^2.0.0-rc.1",
     "style-loader": "^0.20.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.0.0"
