--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "awesome-typescript-loader": "^3.5.0",
     "babel-loader": "^8.0.4",
     "babel-minify-webpack-plugin": "^0.3.1",
-    "clean-webpack-plugin": "^0.1.0",
-    "compression-webpack-plugin": "^1.1.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^1.1.12",
     "content-security-policy-builder": "^2.0.0",
-    "copy-webpack-plugin": "^4.4.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.0",
     "dotenv": "^5.0.0",
     "dotenv-webpack": "^1.5.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "graphql": "^14.0.0",
     "graphql-config": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -49,8 +49,8 @@
     "relay-compiler-webpack-plugin": "^2.0.0-rc.1",
     "style-loader": "^0.20.0",
     "typescript": "^3.2.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.0.0"
+    "webpack": "^4.27.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
@@ -60,9 +60,11 @@
     "flow-bin": "^0.83.0",
     "precss": "^2.0.0",
     "react": "^16.2.0",
-    "react-relay": "^1.5.0"
+    "react-relay": "^1.5.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-sources": "^1.0.1"
   },
   "peerDependencies": {
-    "webpack": "^3.0.0"
+    "webpack": "^4.0.0"
   }
 }
