--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react": "^16.2.0",
     "react-relay": "^1.5.0",
     "webpack-cli": "^3.1.2",
-    "webpack-sources": "^1.0.1"
+    "webpack-sources": "1.0.1"
   },
   "peerDependencies": {
     "webpack": "^4.0.0"
