--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "css-loader": "^0.28.0",
     "dotenv": "^5.0.0",
     "dotenv-webpack": "^1.5.4",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "graphql": "^14.0.0",
     "graphql-config": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "postcss-loader": "^2.1.0",
     "read-pkg": "^3.0.0",
     "relay-compiler": "^1.5.0",
