--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.0",
     "read-pkg": "^3.0.0",
-    "relay-compiler": "^1.5.0",
-    "relay-compiler-webpack-plugin": "2.0.0-rc.1",
+    "relay-compiler": "^2.0.0-rc.1",
+    "relay-compiler-webpack-plugin": "^2.0.0-rc.2",
     "style-loader": "^0.20.0",
     "typescript": "^3.2.1",
     "webpack": "^3.0.0",
