--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
-    "babel-plugin-relay": "^1.5.0",
+    "babel-plugin-relay": "^2.0.0-rc.1",
     "eslint": "^5.9.0",
     "eslint-plugin-github": "^1.6.0",
     "flow-bin": "^0.83.0",
     "precss": "^2.0.0",
     "react": "^16.2.0",
-    "react-relay": "^1.5.0"
+    "react-relay": "^2.0.0-rc.1"
   },
   "peerDependencies": {
     "webpack": "^3.0.0"
