--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-loader": "^2.1.0",
     "read-pkg": "^3.0.0",
     "relay-compiler": "^2.0.0-rc.1",
+    "relay-compiler-language-typescript": "^1.1.1",
     "relay-compiler-webpack-plugin": "^2.0.0-rc.2",
     "style-loader": "^0.20.0",
     "typescript": "^3.2.1",
