install specific branhc of relay-compiler-language-typescript

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "postcss-loader": "^2.1.0",
     "read-pkg": "^3.0.0",
     "relay-compiler": "^2.0.0-rc.1",
-    "relay-compiler-language-typescript": "^1.1.1",
     "relay-compiler-webpack-plugin": "^2.0.0-rc.4",
+    "relay-compiler-language-typescript": "git://github.com/koddsson/relay-compiler-language-typescript.git#dont-require-relay-runtime-string-built",
     "style-loader": "^0.20.0",
     "typescript": "^3.2.1",
     "webpack": "^3.0.0",
