--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "css-loader": "^0.28.0",
     "dotenv": "^5.0.0",
     "dotenv-webpack": "^1.5.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "graphql": "^14.0.0",
     "graphql-compiler": "^2.0.0-rc.1",
     "graphql-config": "^2.0.1",
@@ -52,8 +52,8 @@
     "relay-compiler-language-typescript": "git://github.com/koddsson/relay-compiler-language-typescript.git#dont-require-relay-runtime-string-built",
     "style-loader": "^0.20.0",
     "typescript": "^3.2.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.0.0"
+    "webpack": "^4.29.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
@@ -63,10 +63,11 @@
     "flow-bin": "^0.83.0",
     "precss": "^2.0.0",
     "react": "^16.2.0",
-    "react-relay": "^2.0.0-rc.1"
+    "react-relay": "^2.0.0-rc.1",
+    "webpack-cli": "^3.2.1"
   },
   "peerDependencies": {
     "graphql": "^14.0.0",
-    "webpack": "^3.0.0"
+    "webpack": "^4.0.0"
   }
 }
